@@ -326,7 +326,7 @@
 			users EXCEPT that even if you give the guest user permissions beyond View Only and Reporter,
 			the system will automatically reduce his permissions downward.
 		-->
-		<add key="AllowGuestWithoutLogin" value="0"/>
+		<add key="AllowGuestWithoutLogin" value="1"/>
 		<!--
 			If you have windows security turned on, and if you set 
 			EnableWindowsUserAutoRegistration to "1", then windows users will be
