@@ -90,7 +90,7 @@ iframe {
 <body>
 <% security.write_menu(Response, "reports"); %>
 
-<% if (security.user.is_guest) { %>
+<% if (security.user.is_guest) /* no dashboard */{ %>
 <span style="color:Gray;">edit dashboard not available to "guest" user</span>
 <% } else { %>
 <a href=edit_dashboard.aspx>edit dashboard</a>
